--- a/index.html
+++ b/index.html
@@ -48,18 +48,20 @@
         <img src = "assets/images/profile.png" class = "profile">
         </div>
         <div class = "right-about">
-            <div class="history"><p class="year">2014.4</p><div class = "contents-paragraph"><p class="action">Seikei Uni</p><p class="detail">Major computer science</p></div></div>
-            <div class="history"><p class="year">2015.8</p><div class = "contents-paragraph"><p class="action">Hitchhike 10000+km</p><p class="detail">Japan / Thailand / Malaysia / Australia</p></div></div>
-            <div class="history"><p class="year">2016.3</p><div class = "contents-paragraph"><p class="action">Life is Tech! Mentor</p><p class="detail">Minecraft / Media Art / 3DCG / Movie<br>Camera / Web Service / Web Design</p></div></div>
-            <div class="history"><p class="year">2017.8</p><div class = "contents-paragraph"><p class="action">Queensland Uni<p class="detail">(Australia)</p></p><p class="detail">Business English / IT support intern</p></div></div>
-            <div class="history"><p class="year">2018.5</p><div class = "contents-paragraph"><p class="action">Meeting Sony α7RⅡ</p><p class="detail">photograher at Life is Tech! camp</p></div></div>
-            <div class="history"><p class="year">2018.8</p><div class = "contents-paragraph"><p class="action">Oxford Camp Mentor</p><p class="detail">Life is Tech! global camp movie mentor</p></div></div>
+            <div class="history"><p class="year flex-box">2014.4</p><div class = "contents-paragraph"><p class="action">Seikei Uni</p><p class="detail">Major computer science</p></div></div>
+            <div class="history"><p class="year flex-box">2015.8</p><div class = "contents-paragraph"><p class="action">Hitchhike 10000+km</p><p class="detail">Japan / Thailand / Malaysia / Australia</p></div></div>
+            <div class="history"><p class="year flex-box">2016.3</p><div class = "contents-paragraph"><p class="action">Life is Tech! Mentor</p><p class="detail">Minecraft / Media Art / 3DCG / Movie<br>Camera / Web Service / Web Design</p></div></div>
+            <div class="history"><p class="year flex-box">2017.8</p><div class = "contents-paragraph"><p class="action">Queensland Uni<p class="detail">(Australia)</p></p><p class="detail">Business English / IT support intern</p></div></div>
+            <div class="history"><p class="year flex-box">2018.5</p><div class = "contents-paragraph"><p class="action">Meeting Sony α7RⅡ</p><p class="detail">photograher at Life is Tech! camp</p></div></div>
+            <div class="history"><p class="year flex-box">2018.8</p><div class = "contents-paragraph"><p class="action">Oxford Camp Mentor</p><p class="detail">Life is Tech! global camp movie mentor</p></div></div>
         </div>
       </section>
 
       <section id = "skill" class = "content section container">
         <p class = "header flex-box">skill</p>
-        <script class = "relation container" src="js/skill.js"></script>
+        <div class = "web-box">
+          <script id = "relation" src="js/skill.js"></script>
+        </div>
       </section>
 
       <section id = "work" class = "content section container">
