add favorite svg

--- a/index.html
+++ b/index.html
@@ -40,62 +40,69 @@
           <img src="svg/neon_sign_sxy.svg" width="500" class="flex-box home" alt="">
       </section>
 
-      <section id = "about" class = "content section container">
+      <section id = "about" class = "content container">
         <p class = "header flex-box">about</p>
         <h1>Masakazu Nishimura</h1>
-        <h2>a.k.a MARVEL/MUSASHI</h2>
+        <h2>a.k.a. MARVEL / MUSASHI</h2>
         <div class = "left-about">
         <img src = "assets/images/profile.png" class = "profile">
         </div>
         <div class = "right-about">
-            <div class="history"><p class="year flex-box">2014.4</p><div class = "contents-paragraph"><p class="action">Seikei Uni</p><p class="detail">Major computer science</p></div></div>
+            <div class="history"><p class="year flex-box">2014.4</p><div class = "contents-paragraph"><p class="action">Seikei University</p><p class="detail">Major computer science</p></div></div>
             <div class="history"><p class="year flex-box">2015.8</p><div class = "contents-paragraph"><p class="action">Hitchhike 10000+km</p><p class="detail">Japan / Thailand / Malaysia / Australia</p></div></div>
             <div class="history"><p class="year flex-box">2016.3</p><div class = "contents-paragraph"><p class="action">Life is Tech! Mentor</p><p class="detail">Minecraft / Media Art / 3DCG / Movie<br>Camera / Web Service / Web Design</p></div></div>
-            <div class="history"><p class="year flex-box">2017.8</p><div class = "contents-paragraph"><p class="action">Queensland Uni<p class="detail">(Australia)</p></p><p class="detail">Business English / IT support intern</p></div></div>
+            <div class="history"><p class="year flex-box">2017.8</p><div class = "contents-paragraph"><p class="action">Queensland University</p><p class="detail">Business English / IT support intern</p></div></div>
             <div class="history"><p class="year flex-box">2018.5</p><div class = "contents-paragraph"><p class="action">Meeting Sony α7RⅡ</p><p class="detail">photograher at Life is Tech! camp</p></div></div>
             <div class="history"><p class="year flex-box">2018.8</p><div class = "contents-paragraph"><p class="action">Oxford Camp Mentor</p><p class="detail">Life is Tech! global camp movie mentor</p></div></div>
         </div>
       </section>
 
-      <section id = "skill" class = "content section container">
+      <section id = "skill" class = "content container">
         <p class = "header flex-box">skill</p>
         <div class = "web-box">
           <script id = "relation" src="js/skill.js"></script>
         </div>
       </section>
 
-      <section id = "work" class = "content section container">
+      <section id = "work" class = "content container">
         <p class = "header flex-box">work</p>
         <div class = "work-box" data-aos="fade-up">
-          <img src = "" class = "work-square">
+          <img src = "assets/images/technologia.png" class = "work-square">
           <p class = "work-title">technologia</p>
         </div>
         <div class = "work-box" data-aos="fade-up">
-          <img src = "" class = "work-square">
+          <img src = "assets/images/mentor.png" class = "work-square">
           <p class = "work-title">mentor</p>
         </div>
         <div class = "work-box" data-aos="fade-up">
-          <img src = "" class = "work-square">
+          <img src = "assets/images/photographer.png" class = "work-square">
           <p class = "work-title">photographer</p>
         </div>
         <div class = "work-box" data-aos="fade-up">
-          <img src = "" class = "work-square">
+          <img src = "assets/images/sony.png" class = "work-square">
           <p class = "work-title">Sony Mesh</p>
         </div>
         <div class = "work-box" data-aos="fade-up">
-          <img src = "" class = "work-square">
+          <img src = "assets/images/youtuber.png" class = "work-square">
           <p class = "work-title">Youtuber</p>
         </div>
         <div class = "work-box" data-aos="fade-up">
-          <img src = "" class = "work-square">
+          <img src = "assets/images/hanamaru.png" class = "work-square">
           <p class = "work-title">Hanamaru Lab</p>
         </div>
       </section>
 
-      <section id = "favorite" class = "content section container">
+      <section id = "favorite" class = "content container">
         <p class = "header flex-box">favorite</p>
-        <div class = "upshelf"></div>
-        <div class = "downshelf"></div>
+        <div class = "upshelf">
+          <div class="box-topleft shelf"><img src="svg/camera.svg" width="320" alt=""></div>
+          <div class = "shelf"><img src="svg/spider.svg" width="256" alt=""></div>
+          <div class="box-topright shelf"><img src="svg/pc.svg" width="320" alt=""></div>
+        </div>
+        <div class = "downshelf">
+            <div class="box-topleft shelf"><img src="svg/backpack.svg" width="256" alt=""></div>
+            <div class="box-topright shelf"><img src="svg/soccer.svg" width="256" alt=""></div>
+        </div>
       </section>
     </div>
   </body>
