--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
       </ul>
       </div>
     </nav>
-    <div class = "container" id = "fullpage"></div>
-      <section id = "home" class = "content section flex-box">
-          <img src="svg/neon_sign_sxy.svg" width="500" class="flex-box home" alt="">
+    <div class = "container" id = "fullpage">
+      <section id = "home" class = "content flex-box">
+          <img src="svg/neon_sign_sxy.svg" width="500" class="home" alt="">
       </section>
 
-      <section id = "about" class = "content container">
-        <p class = "header flex-box">about</p>
+      <section id = "about" class = "content container flex-box">
+        <div class="container-height">
         <h1>Masakazu Nishimura</h1>
         <h2>a.k.a. MARVEL / MUSASHI</h2>
         <div class = "left-about">
@@ -55,17 +55,17 @@
             <div class="history"><p class="year flex-box">2018.5</p><div class = "contents-paragraph"><p class="action">Meeting Sony α7RⅡ</p><p class="detail">photograher at Life is Tech! camp</p></div></div>
             <div class="history"><p class="year flex-box">2018.8</p><div class = "contents-paragraph"><p class="action">Oxford Camp Mentor</p><p class="detail">Life is Tech! global camp movie mentor</p></div></div>
         </div>
+      </div>
       </section>
 
-      <section id = "skill" class = "content container">
-        <p class = "header flex-box">skill</p>
-        <div class = "web-box">
+      <section id = "skill" class = "content container flex-box">
+        <div class="container-height">
           <script id = "relation" src="js/skill.js"></script>
-        </div>
+      </div>
       </section>
 
-      <section id = "work" class = "content container">
-        <p class = "header flex-box">work</p>
+      <section id = "work" class = "content container flex-box">
+          <div class="container-height">
         <div class = "work-box" data-aos="fade-up">
           <img src = "assets/images/technologia.png" class = "work-square">
           <p class = "work-title">technologia</p>
@@ -90,19 +90,21 @@
           <img src = "assets/images/hanamaru.png" class = "work-square">
           <p class = "work-title">Hanamaru Lab</p>
         </div>
+      </div>
       </section>
 
-      <section id = "favorite" class = "content container">
-        <p class = "header flex-box">favorite</p>
+      <section id = "favorite" class = "content container flex-box">
+          <div class="container-height">
         <div class = "upshelf">
-          <div class="box-topleft shelf"><img src="svg/camera.svg" width="320" alt=""></div>
-          <div class = "shelf"><img src="svg/spider.svg" width="256" alt=""></div>
-          <div class="box-topright shelf"><img src="svg/pc.svg" width="320" alt=""></div>
+          <div class="box-topleft shelf flex-box"><img src="svg/camera.svg" width="320" alt=""></div>
+          <div class = "shelf flex-box"><img src="svg/spider.svg" width="256" alt=""></div>
+          <div class="box-topright shelf flex-box"><img src="svg/pc.svg" width="320" alt=""></div>
         </div>
-        <div class = "downshelf">
-            <div class="box-topleft shelf"><img src="svg/backpack.svg" width="256" alt=""></div>
-            <div class="box-topright shelf"><img src="svg/soccer.svg" width="256" alt=""></div>
+        <div class = "downshelf flex-box">
+            <div class="box-topleft shelf flex-box"><img src="svg/backpack.svg" width="256" height = "256"alt=""></div>
+            <div class="box-topright shelf flex-box"><img src="svg/soccer.svg" width="256" alt=""></div>
         </div>
+      </div>
       </section>
     </div>
   </body>
