--- a/index.html
+++ b/index.html
@@ -38,7 +38,14 @@
     </nav>
     <div class = "container" id = "fullpage">
       <section id = "home" class = "content flex-box">
-          <img src="svg/neon_sign_sxy.svg" width="500" class="home" alt="">
+        <div class="eye-catch">
+          <img src = "svg/neon_sign_sxy.svg" width="500" class="home" alt="">
+          <div class = "sns">
+            <a href = "https://www.facebook.com/masakazumarvel" class = "facebook"><img src="svg/facebook.svg" width = "95"alt=""></a>
+            <a href = "https://github.com/ASadSexyImp" class = "github"><img src="svg/github.svg" width = "95"alt=""></a>
+            <a href = "https://www.linkedin.com/in/masamarvel/" class = "linkedin"><img src="svg/linkedin.svg" width = "95"alt=""></a>
+          </div>
+        </div>
       </section>
 
       <section id = "about" class = "content container flex-box">
@@ -70,27 +77,27 @@
       <section id = "work" class = "content container flex-box">
           <div class="container-height">
         <div class = "work-box" data-aos="fade-up">
-          <img src = "assets/images/technologia.png" class = "work-square">
-          <p class = "work-title">technologia</p>
+          <a href = "https://en.technologia-schoolofmagic.jp/"><img src = "assets/images/technologia.png" class = "work-square"></a>
+          <p class = "work-title">Technologia</p>
         </div>
         <div class = "work-box" data-aos="fade-up">
-          <img src = "assets/images/mentor.png" class = "work-square">
-          <p class = "work-title">mentor</p>
+          <a href = "https://lifeistech.co.jp/en/"><img src = "assets/images/mentor.png" class = "work-square"></a>
+          <p class = "work-title">Mentor</p>
         </div>
         <div class = "work-box" data-aos="fade-up">
-          <img src = "assets/images/photographer.png" class = "work-square">
-          <p class = "work-title">photographer</p>
+          <a href = "https://www.flickr.com/people/asadsexyimp/"><img src = "assets/images/photographer.png" class = "work-square"></a>
+          <p class = "work-title">Photographer</p>
         </div>
         <div class = "work-box" data-aos="fade-up">
-          <img src = "assets/images/sony.png" class = "work-square">
+          <a href = "http://meshprj.com/en/"><img src = "assets/images/sony.png" class = "work-square"></a>
           <p class = "work-title">Sony Mesh</p>
         </div>
         <div class = "work-box" data-aos="fade-up">
-          <img src = "assets/images/youtuber.png" class = "work-square">
+          <a href = "https://youtu.be/elhT5DbQ_YA"><img src = "assets/images/youtuber.png" class = "work-square"></a>
           <p class = "work-title">Youtuber</p>
         </div>
         <div class = "work-box" data-aos="fade-up">
-          <img src = "assets/images/hanamaru.png" class = "work-square">
+          <a href = "https://www.hanamarulab.com/en"><img src = "assets/images/hanamaru.png" class = "work-square"></a>
           <p class = "work-title">Hanamaru Lab</p>
         </div>
       </div>
