--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         <div class="eye-catch">
           <img src = "svg/neon_sign_sxy.svg" width="500" class="home" alt="">
           <div class = "sns">
-            <a href = "https://www.facebook.com/masakazumarvel" class = "facebook"><img src="svg/facebook.svg" width = "95"alt=""></a>
-            <a href = "https://github.com/ASadSexyImp" class = "github"><img src="svg/github.svg" width = "95"alt=""></a>
-            <a href = "https://www.linkedin.com/in/masamarvel/" class = "linkedin"><img src="svg/linkedin.svg" width = "95"alt=""></a>
+            <a href = "https://www.facebook.com/masakazumarvel" class = "facebook" target="_blank"><img src="svg/facebook.svg" width = "95"alt=""></a>
+            <a href = "https://github.com/ASadSexyImp" class = "github" target="_blank"><img src="svg/github.svg" width = "95"alt=""></a>
+            <a href = "https://www.linkedin.com/in/masamarvel/" class = "linkedin" target="_blank"><img src="svg/linkedin.svg" width = "95"alt=""></a>
           </div>
         </div>
       </section>
