--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.4/fullpage.css" rel="stylesheet">
     <script src = "js/nav.js"></script>
+    <script src = "js/smoothscroll.js"></script>
     <!-- スクロールを１ページずつにしてくれるライブラリ -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/smooth-scroll/15.2.1/smooth-scroll.min.js"></script> -->
     <!-- <script src="js/fullpage.js"></script> -->
@@ -77,27 +78,27 @@
       <section id = "work" class = "content container flex-box">
           <div class="container-height">
         <div class = "work-box" data-aos="fade-up">
-          <a href = "https://en.technologia-schoolofmagic.jp/"><img src = "assets/images/technologia.png" class = "work-square"></a>
+          <a href = "https://en.technologia-schoolofmagic.jp/" target="_blank"><img src = "assets/images/technologia.png" class = "work-square"></a>
           <p class = "work-title">Technologia</p>
         </div>
         <div class = "work-box" data-aos="fade-up">
-          <a href = "https://lifeistech.co.jp/en/"><img src = "assets/images/mentor.png" class = "work-square"></a>
+          <a href = "https://lifeistech.co.jp/en/" target="_blank"><img src = "assets/images/mentor.png" class = "work-square"></a>
           <p class = "work-title">Mentor</p>
         </div>
         <div class = "work-box" data-aos="fade-up">
-          <a href = "https://www.flickr.com/people/asadsexyimp/"><img src = "assets/images/photographer.png" class = "work-square"></a>
+          <a href = "https://www.flickr.com/people/asadsexyimp/" target="_blank"><img src = "assets/images/photographer.png" class = "work-square"></a>
           <p class = "work-title">Photographer</p>
         </div>
         <div class = "work-box" data-aos="fade-up">
-          <a href = "http://meshprj.com/en/"><img src = "assets/images/sony.png" class = "work-square"></a>
+          <a href = "http://meshprj.com/en/" target="_blank"><img src = "assets/images/sony.png" class = "work-square"></a>
           <p class = "work-title">Sony Mesh</p>
         </div>
         <div class = "work-box" data-aos="fade-up">
-          <a href = "https://youtu.be/elhT5DbQ_YA"><img src = "assets/images/youtuber.png" class = "work-square"></a>
+          <a href = "https://youtu.be/elhT5DbQ_YA" target="_blank"><img src = "assets/images/youtuber.png" class = "work-square"></a>
           <p class = "work-title">Youtuber</p>
         </div>
         <div class = "work-box" data-aos="fade-up">
-          <a href = "https://www.hanamarulab.com/en"><img src = "assets/images/hanamaru.png" class = "work-square"></a>
+          <a href = "https://www.hanamarulab.com/en" target="_blank"><img src = "assets/images/hanamaru.png" class = "work-square"></a>
           <p class = "work-title">Hanamaru Lab</p>
         </div>
       </div>
