--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Bevan" rel="stylesheet"/>
     <link rel="stylesheet" href="css/style.css" />
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- fullpage関係 -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.4/fullpage.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.4/fullpage.min.js"></script>
