--- a/index.html
+++ b/index.html
@@ -1,103 +1,100 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="UTF-8" />
-    <title>asadsexyimp</title>
-    <!-- css -->
-    <link rel="stylesheet" href="css/style.css" />
-    <!-- font -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Bevan"
-      rel="stylesheet"
-    />
-    <!-- plugin -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <title>asadsexyimp</title>
+  <!-- css -->
+  <link rel="stylesheet" href="css/style.css" />
+  <!-- font -->
+  <link href="https://fonts.googleapis.com/css?family=Bevan" rel="stylesheet" />
+  <!-- plugin -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+</head>
 
-  <body>
-    <!-- navエリア -->
-    <nav>
-      <!-- https://codepen.io/inesmontani/pen/LGKPqY
+<body>
+  <!-- navエリア -->
+  <nav>
+    <!-- https://codepen.io/inesmontani/pen/LGKPqY
       https://codepen.io/wbarahona/pen/vLoyOb -->
-      <ul>
-        <li class="box box-topleft flex-box about">
-          <a href="#about">about</a>
-        </li>
-        <li class="box box-topright flex-box skill">
-          <a href="#skill">skill</a>
-        </li>
-        <li class="box box-bottomleft flex-box work">
-          <a href="#work">history</a>
-        </li>
-        <li class="box box-bottomleft flex-box work">
-          <a href="#work">work</a>
-        </li>
-        <li class="box box-bottomright flex-box favorite">
-          <a href="#favorite">contact</a>
-        </li>
-      </ul>
-    </nav>
+    <ul>
+      <li class="box box-topleft flex-box about">
+        <a href="#about">about</a>
+      </li>
+      <li class="box box-topright flex-box skill">
+        <a href="#skill">skill</a>
+      </li>
+      <li class="box box-bottomleft flex-box work">
+        <a href="#work">history</a>
+      </li>
+      <li class="box box-bottomleft flex-box work">
+        <a href="#work">work</a>
+      </li>
+      <li class="box box-bottomright flex-box favorite">
+        <a href="#favorite">contact</a>
+      </li>
+    </ul>
+  </nav>
 
-    <!-- コンテンツ -->
-    <div class="container">
-      <!-- キャッチエリア -->
-      <section id="home" class="content flex-box">
-        <!-- p5.js or theree.js でメディアアート作品 -->
-        <p>masakazu nishimura</p>
-        <!-- https://codepen.io/Ulvbern/pen/gjWJWx -->
+  <!-- コンテンツ -->
+  <div class="container">
+    <!-- キャッチエリア -->
+    <section id="home" class="content flex-box">
+      <!-- p5.js or theree.js でメディアアート作品 -->
+      <p>masakazu nishimura</p>
+      <!-- https://codepen.io/Ulvbern/pen/gjWJWx -->
 
-        <!-- 背景 -->
-        <!-- https://codepen.io/towc/pen/QbZOaJ
+      <!-- 背景 -->
+      <!-- https://codepen.io/towc/pen/QbZOaJ
         https://codepen.io/suth_a/pen/wJJQRa
         https://codepen.io/joehandlebar/pen/MyoXRg -->
-      </section>
+    </section>
 
-      <section id="about" class="content flex-box">
-        <h1>about</h1>
-        <h2>Creator</h2>
-        <p>I'm not a engneer or designer<br />I just love creation with IT</p>
-        <!-- クリッピングマスクした写真のスライドショー -->
-        <!-- https://codepen.io/jcoulterdesign/pen/OMOqjy -->
-        <p>I can program</p>
-        <p>I can design</p>
-        <p>I can challenge</p>
-        <p>I can change</p>
-        <p>I can imagine</p>
-        <!-- 文字もスライドする -->
-      </section>
+    <section id="about" class="content flex-box">
+      <h1>about</h1>
+      <h2>Creator</h2>
+      <p>I'm not a engneer or designer<br />I just love creation with IT</p>
+      <!-- クリッピングマスクした写真のスライドショー -->
+      <!-- https://codepen.io/jcoulterdesign/pen/OMOqjy -->
+      <p>I can program</p>
+      <p>I can design</p>
+      <p>I can challenge</p>
+      <p>I can change</p>
+      <p>I can imagine</p>
+      <!-- 文字もスライドする -->
+    </section>
 
-      <section id="skill" class="content flex-box">
-        <h1>skill</h1>
-        <!-- 時間表示
+    <section id="skill" class="content flex-box">
+      <h1>skill</h1>
+      <!-- 時間表示
         https://codepen.io/christianhanvey/pen/imKIb
         ホログラム
         https://codepen.io/gau/pen/ogqjzw
         https://codepen.io/marioluevanos/pen/XKqNkB
         https://codepen.io/k3no/pen/BLNEKg
         https://codepen.io/mo3golom/pen/VjGkLy?&page=2 -->
-      </section>
+    </section>
 
-      <section id="history" class="content flex-box">
-        <h1>history</h1>
-        <!-- timeline.js -->
-      </section>
+    <section id="history" class="content flex-box">
+      <h1>history</h1>
+      <!-- timeline.js -->
+    </section>
 
-      <section id="work" class="content flex-box">
-        <h1>work</h1>
-      </section>
+    <section id="work" class="content flex-box">
+      <h1>work</h1>
+    </section>
 
-      <section id="contact" class="content flex-box">
-        <h1>contact</h1>
-        <!-- facebook
-        youtube
-        qiita
-        linkedin
-        wantedly
-        github
-        flicker -->
-      </section>
+    <section id="contact" class="content flex-box">
+      <h1>contact</h1>
+      <a ref="https://www.facebook.com/masakazumarvel">facebook</a>
+      <a ref="https://www.instagram.com/asadsexyimp/">instagram</a>
+      <a ref="https://www.youtube.com/channel/UCUwe_HaOMhG1-4hpL-OhYcA">youtube</a>
+      <a ref="https://github.com/ASadSexyImp">github</a>
+      <a ref="https://qiita.com/asadsexyimp">qiita</a>
+      <a ref="https://www.wantedly.com/users/12662057">wantedly</a>
+      <a ref="https://www.linkedin.com/in/masamarvel/">linkedin</a>
+    </section>
 
-      <footer>©︎asadsexyimp</footer>
-    </div>
-  </body>
+    <footer>©︎asadsexyimp</footer>
+  </div>
+</body>
 </html>
