--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
 
     <section id="contact" class="content flex-box">
       <h1>contact</h1>
-      <a ref="https://www.facebook.com/masakazumarvel">facebook</a>
-      <a ref="https://www.instagram.com/asadsexyimp/">instagram</a>
-      <a ref="https://www.youtube.com/channel/UCUwe_HaOMhG1-4hpL-OhYcA">youtube</a>
-      <a ref="https://github.com/ASadSexyImp">github</a>
+      <a ref="https://www.facebook.com/masakazumarvel"><i class="fab fa-facebook"></i></a>
+      <a ref="https://www.instagram.com/asadsexyimp/"><i class="fab fa-instagram"></i></a>
+      <a ref="https://www.youtube.com/channel/UCUwe_HaOMhG1-4hpL-OhYcA"><i class="fab fa-youtube"></i></a>
+      <a ref="https://github.com/ASadSexyImp"><i class="fab fa-github"></i></a>
       <a ref="https://qiita.com/asadsexyimp">qiita</a>
       <a ref="https://www.wantedly.com/users/12662057">wantedly</a>
-      <a ref="https://www.linkedin.com/in/masamarvel/">linkedin</a>
+      <a ref="https://www.linkedin.com/in/masamarvel/"><i class="fab fa-linkedin-in"></i></a>
     </section>
 
     <footer>©︎asadsexyimp</footer>
