--- a/index.html
+++ b/index.html
@@ -87,11 +87,14 @@
       <h1>contact</h1>
       <a ref="https://www.facebook.com/masakazumarvel"><i class="fab fa-facebook"></i></a>
       <a ref="https://www.instagram.com/asadsexyimp/"><i class="fab fa-instagram"></i></a>
+      <a ref="https://www.instagram.com/sxy_studio/"><i class="fab fa-instagram"></i></a>
       <a ref="https://www.youtube.com/channel/UCUwe_HaOMhG1-4hpL-OhYcA"><i class="fab fa-youtube"></i></a>
       <a ref="https://github.com/ASadSexyImp"><i class="fab fa-github"></i></a>
       <a ref="https://qiita.com/asadsexyimp">qiita</a>
-      <a ref="https://www.wantedly.com/users/12662057">wantedly</a>
+      <a ref="https://www.couchsurfing.com/people/masakazu-nishimura">coushsurfing</a>
+      <a ref="https://filmarks.com/users/masamarvel">filmarks</a>
       <a ref="https://www.linkedin.com/in/masamarvel/"><i class="fab fa-linkedin-in"></i></a>
+      <a ref="https://www.wantedly.com/users/12662057">wantedly</a>
     </section>
 
     <footer>©︎asadsexyimp</footer>
